--- a/.htaccess
+++ b/.htaccess
@@ -1,26 +1,4 @@
-
-
-
-RewriteEngine On
-
-
-
-RewriteBase /tsweb/
-
-
-
-RewriteRule ^index\.php$ - [L]
-
-
-
+RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-f
-
-
-
 RewriteCond %{REQUEST_FILENAME} !-d
-
-
-
-RewriteRule . /tsweb/index.php [L]
-
-
+RewriteRule .* index.php?/$0 [PT,L] 
